--- a/partials/guestNavbar.html
+++ b/partials/guestNavbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Phillips Web Audio Sampler</a>
+      <a class="navbar-brand" href="#">Life Audio Sampler</a>
     </div>
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
